--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
     "cordova-plugin-console",
     "cordova-plugin-whitelist",
     "cordova-plugin-splashscreen",
+    "cordova-background-geolocation-lt",
     "com.ionic.keyboard",
     {
       "locator": "https://github.com/christocracy/cordova-background-geolocation.git#edge",
